Release Notes for the event package
-----------------------------------

event-R3-2-2:
	* Modify RELEASE_SITE to use base-R3-14-8-2-lcls6_p1
	  Modify configure/RELEASE to use
 		GENERALTIME_MODULE_VERSION=generalTime-R2-2-1
 		MISCUTILS_MODULE_VERSION=miscUtils-R2-2-1
        * evrSupport/Db/bsa/bsaEdefFanouts.db: 
	    Comment out TSE field (previously set to -2) to fix 
            timestamp bug. Merging this change onto main trunk; 
            was previously only on event-R3-2-1-lcls3 branch

event-R3-2-1:
	* Made event code 162's delay < event code 140

event-R3-2-0:
	* Build with base-R3-14-8-2-lcls6
	* Build with rtems-4.9.4

event-R3-1-7:
	* Added status PVs for Event Code Sequences (ecs)


event-R3-1-6: Mar 1, 2010
        * evrSupport/src/bsa.c and bsa.h - Changes to maximize BSA stat/sevr: 
              bsa_ts: add data status and severity
              bsaSecnAvg: add data status to argument list; add data status
                and severity to average initialization section; compute running 
                maximum of stat/sevr; 
              read_bsa: set record alarms to maximum stat/sevr;
              write_ao: replace dbGetTimeStamp with dbGetField to get stat/sevr
         * README - II-(2) add data status argument 

event-R3-1-5:  Build with base-R3-14-8-2-lcls5
               Build with rtems-4.9.3

event-R3-0-5:  Nov 18, 2009:
	* evrSupport/src/evrPattern.c, evrPattern.h - remove evrPatternMPS 
	  which changed other bits in modifiers 1 to 4 based on the MPS
	  modifier.  Instead, the MPS modifier will be added to 
	  inclusion/exclusion checks on the EVG IOC.  
	  Change MOD5_BEAMFULL_MASK, used by BPM acquisition to know when
	  to process data, to use a different bit which the EVG IOC will
	  set independent of the full-rate (BR) EDEF.

event-R3-0-4:  Nov 11, 2009:
	* evrSupport/src/drvEvr.c - change evrRecord thread to run at a
	  lower priority.  Add bsaInit.  Add MPS modifier to evrTime and 
	  evrPattern argument lists.