@@ -16,7 +16,7 @@ TEMPLATE_TOP=$(EPICS_BASE)/templates/makeBaseApp/top
 # Define location of module tree with respect to
 # EPICS_SITE_TOP
 # =============================================================
-EPICS_MODULES=$(EPICS_SITE_TOP)/modules
+EPICS_MODULES=$(EPICS_SITE_TOP)/modules/R3-14-12
 
 # ==============================================================
 # Define the version of EPICS BASE that you will use
@@ -27,13 +27,13 @@ BASE_MODULE_VERSION=$(EPICS_BASE_VER)
 # Define the version of modules needed by
 # IOC apps or other Support apps
 # =============================================================
-GENERALTIME_MODULE_VERSION=generalTime-R2-2-1
-MISCUTILS_MODULE_VERSION=miscUtils-R2-2-1
+#GENERALTIME_MODULE_VERSION=generalTime-R2-2-1
+MISCUTILS_MODULE_VERSION=miscUtils-R2-2-2
 
 # ============================================================
 # External Support
 # ============================================================
-GENERALTIME=$(EPICS_MODULES)/generalTime/$(GENERALTIME_MODULE_VERSION)
+#GENERALTIME=$(EPICS_MODULES)/generalTime/$(GENERALTIME_MODULE_VERSION)
 MISCUTILS=$(EPICS_MODULES)/miscUtils/$(MISCUTILS_MODULE_VERSION)
 
 # =================================================================
