@@ -46,9 +46,9 @@ pattern { DEV      ,    LNK4 ,    LNK5 ,    LNK6 ,   VAL  ,   TS1   ,   TS2   }
 	{ $(DEVICE), $(LINK4), $(LINK5), $(LINK6), $(TREF), $(TS1ST), $(TS2ND)}
 }
 
-file generalTimeNonVx.template
-{
-#     Location  , Unit       
-pattern { IOC         }
-	{ $(DEVICE) }
-}
+#file generalTimeNonVx.template
+#{
+##     Location  , Unit       
+#pattern { IOC         }
+#	{ $(DEVICE) }
+#}
