@@ -57,8 +57,8 @@ DBD += devMrfEg.dbd
 DBD += devMrfEgEvent.dbd
 DBD += drvMrfEr.dbd
 DBD += devMrfEr.dbd
-DBD += devMrfEgLib.dbd
-DBD += devMrfErLib.dbd
+#DBD += devMrfEgLib.dbd
+#DBD += devMrfErLib.dbd
 devMrfEgLib_DBD += devMrfEg.dbd
 devMrfEgLib_DBD += devMrfEgEvent.dbd
 devMrfErLib_DBD += base.dbd
